Modificaciones README y AUTHORS

--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -1,4 +1,4 @@
 Desarrollado por:
 
-Nicolás Silva Herrera
-Twitter: @nsilvaherrera
+Unidad de Modernización y Gobierno Digital
+Twitter: @Modernizacioncl
