--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -2,3 +2,5 @@ Desarrollado por:
 
 Unidad de Modernización y Gobierno Digital
 Twitter: @Modernizacioncl
+Email: simple@minsegpres.gob.cl
+Url: [http://www.modernizacion.gob.cl/](http://www.modernizacion.gob.cl/) 
