--- a/AUTHORS.txt
+++ b/AUTHORS.txt
@@ -3,4 +3,4 @@ Desarrollado por:
 Unidad de Modernización y Gobierno Digital
 Twitter: @Modernizacioncl
 Email: simple@minsegpres.gob.cl
-Url: [http://www.modernizacion.gob.cl/](http://www.modernizacion.gob.cl/) 
+Url: http://www.modernizacion.gob.cl
